[package]
name = "dbs-snapshot"
version = "1.5.0"
authors = [
    "Amazon Firecracker team <firecracker-devel@amazon.com>",
    "Kata Containers Developers",
]
edition = "2021"
autobenches = false
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/kata-containers/dbs-snapshot"
homepage = "https://github.com/kata-containers/dbs-snapshot"
description = "A version tolerant state serialization and deserialization library"

[lib]
bench = false

[dependencies]
libc = "0.2.117"
versionize = "0.1.10"
versionize_derive = "0.1.5"
thiserror = "1.0.32"
displaydoc = "0.2.4"

[dev-dependencies]
criterion = { version = "0.5.0", default-features = false }

[[bench]]
name = "version_map"
harness = false
